BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Med_Plan_Communication_Topic_BMS__c.object
<CustomObject>
    <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom object to store the medical plan alignment communication topics an MSL can discuss as part of an interaction.</description>
    <fields>
        <fullName>Description_BMS__c</fullName>
        <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom field to store the description of a given medical plan alignment communication topic.</description>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Medical_Strategy_BMS__c</fullName>
        <label>Medical Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_BMS__c</fullName>
        <description>VPRO - December 2011 - BMS Oncology Requirements &amp; Design: Custom field to store the title of a given medical plan alignment communication topic.</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Med Plan Alignment: Communication Topic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_ID_BMS__c</columns>
        <columns>Title_BMS__c</columns>
        <columns>Medical_Strategy_BMS__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Med. Plan Alignment: Communication Topic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Med Plan Alignment: Communication Topics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>